--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-195.1KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇫🇷 法国-674.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-357.6KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.75MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.05MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-203.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33009, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-218.6KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-2.67MB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.89MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.05MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.93MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-488.4KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 捷克-313.0KB/s(Youtube:不良林), server: t03.ssrsub.com, port: 58443, type: trojan, password: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, sni: t03.ssrsub.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇺🇸 美国-951.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
+      - 捷克-313.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
+      - 捷克-313.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
+      - 捷克-313.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
+      - 捷克-313.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
+      - 捷克-313.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
+      - 捷克-313.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-195.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 🇫🇷 法国-674.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-203.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-488.4KB/s(Youtube:不良林)
+      - 捷克-313.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
