--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-951.1KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-218.6KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.21MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.30MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-403.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-3.56MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.54MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.79MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇻🇳 越南-293.9KB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-217.4KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-210.8KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇫🇷 法国-265.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-462.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
@@ -66,6 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-2.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -73,12 +74,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
@@ -88,12 +89,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
@@ -104,12 +105,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
@@ -129,12 +130,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-951.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-218.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.79MB/s(Youtube:不良林)
       - 🇻🇳 越南-293.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-210.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-265.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-462.2KB/s(Youtube:不良林)
